<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cimitery</string>
        
    <string name="welcome">Welcome to Cimitery. Please select how you would like to go on:</string>
    <string name="radio1_search">Search by name or category</string>
    <string name="radio2_location">Search by GPS location</string>
    <string name="welcomeButton">Enter Cimitery</string>
    <string name="labelSearchName">Enter the name of the person you are looking for.</string>
    <string name="labelSearchFirstname">Firstname:</string>
    <string name="labelSearchLastname">Lastname:</string>
    <string name="labelSelectCemetery">Select a cemetery from the list below:</string>
    <string name="searchButton">Search for name</string>
    
    <string name="gpsLocateButton">Find my location</string>
    <string name="labelLocation">GPS located you at:</string>
    
    <string name="labelInputFirstname">Firstname:</string>
    <string name="labelInputLastname">Lastname:</string>
    <string name="labelInputSex">Sex:</string>
    <string name="buttonNewGrave">Save new grave</string>
    <string name="buttonSelectPhoto">Select a photo</string>
    <string name="radio_female">Female</string>
    <string name="radio_male">Male</string>
    <string name="labelSelectDateBirth">Date of Birth:</string>
	<string name="labelSelectDateDeath">Date of Death:</string> 
	<string name="buttonLinkVita">Open Vita</string>
	<string name="categories">Select categories</string>
	<string name="labelInCategories">For famous people select one or more categories</string>
    
    
    <string-array name="cemeteryNames">
        <item>Dorotheenstädtischer Friedhof</item>
        <item>Friedhof Stubenrauchstrasse</item>
    </string-array>
    
    <string-array name="categoryNames">
        <item >Author</item>
        <item >Publicist</item>
        <item >Journalist</item>
        <item >Poet</item>
        <item >Musician</item>
        <item >Singer</item>
        <item >Songwriter</item>
        <item >Composer</item>
        <item >Movie actor</item>
        <item >Stage actor</item>
        <item >Director</item>
        <item >Artist</item>
        <item >Painter</item>
        <item >Photographer</item>
        <item >Sculptor</item>
        <item >Politician</item>
        <item >Civil rights activist</item>
        <item >Statesman</item>
    </string-array>
    
    
    <!-- ActionBar Menu -->
    <string name="action_newgrave">New grave</string>
    <string name="action_searchbyname">Search by name</string>
    <string name="action_searchbylocation">Search by Location</string>
    <string name="action_finish">Finish</string>
    <string name="action_settings">Settings</string>

</resources>
