<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <Button
        android:id="@+id/buttonSelectPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonSelectPhoto" />

    <ImageView
        android:id="@+id/imageViewTombstone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/tv_TombstonePath"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <TextView
        android:id="@+id/labelInFirstname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelInputFirstname" />

    <EditText
        android:id="@+id/editInFirstname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/labelInLastname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelInputLastname" />

    <EditText
        android:id="@+id/editInLastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/labelInSex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelInputSex" />
    
    <RadioGroup
            android:id="@+id/radioGroupSex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/radioFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/radio_female" />

            <RadioButton
                android:id="@+id/radioMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_male" />

        </RadioGroup>

    <TextView
        android:id="@+id/labelInCemetery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelSelectCemetery" />
    
    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    
    
    <!-- Button zum Sichern der Eingaben und Erstellen eines neuen Datensatzes in der Datenbank -->
    <Button
        android:id="@+id/buttonNewGrave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonNewGrave" />
     

</LinearLayout>