<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="15dp"
    >
    
    <TextView
        android:id="@+id/labelSelectCemetery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelSelectCemetery" />

    <Spinner
        android:id="@+id/spinnerCemetery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/labelSearchName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelSearchName" />
    
    <TextView
        android:id="@+id/labelSearchFirstname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelSearchFirstname" />

    <EditText
        android:id="@+id/inputSearchFirstname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" >
        <requestFocus />
    </EditText>
    
    <TextView
        android:id="@+id/labelSearchLastname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelSearchLastname" />
    
    <EditText
        android:id="@+id/inputSearchLastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" >
        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/buttonSearchName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/searchButton" />


    
</LinearLayout>
