<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="15dp"
	android:orientation="vertical"
    tools:context=".MainActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/welcomeText"
        android:text="@string/welcome"
        android:layout_gravity="center" />

    <ImageView
        android:layout_width="285dp"
        android:layout_height="220dp"
        android:src="@drawable/cemetery" />
	
    <RadioGroup
        android:id="@+id/radioGroupWelcome"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.52" >

        <RadioButton
            android:id="@+id/radioSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/radio1_search" />
        
        <RadioButton
            android:id="@+id/radioLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/radio2_location" />

    </RadioGroup>
    
    <Button
            android:id="@+id/buttonWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/welcomeButton" />


</LinearLayout>